sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: value int
		if (plusPetitQue(int i + 1, int i)){
                                 ^